manifests/coredns/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coredns
  labels:
    k8s-app: kube-dns
  annotations:
    io.cilium/lb-ipam-ips: "cluster.coredns.fixedIPv4,cluster.coredns.fixedIPv6"
    external-dns.alpha.kubernetes.io/hostname: ns1.DOMAIN.
spec:
  type: LoadBalancer
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: RequireDualStack
  selector:
    k8s-app: kube-dns
  ports:
  - name: dns-udp
    port: 53
    targetPort: 5353
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 5353
    protocol: TCP
